# whisper-asr-webservice

./: .gitignore  Dockerfile  Dockerfile.faster-whisper  Dockerfile.gpu  Dockerfile.openai-whisper  Dockerfile.parakeet  Dockerfile.vllm-whisper  Dockerfile.voxtral  Dockerfile.whisperx  Makefile  README.md  pyproject.toml
app/: config.py  logging_config.py  telemetry.py  webservice.py
app/asr_models/: asr_model.py  faster_whisper_engine.py  mbain_whisperx_engine.py  parakeet_engine.py  vllm_whisper_engine.py  voxtral_engine.py
app/factory/: asr_model_factory.py
app/middleware/: structured_logging.py
benchmark/: README.md
benchmark/data/: .gitkeep
deployment/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
monitoring/: grafana-dashboard.json
scripts/: download_model.py
