[project]
name = "whisper-asr-webservice"
version = "1.10.0-dev"
description = "Whisper ASR Webservice is a general-purpose speech recognition webservice."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.14)",
    "uvicorn[standard] (>=0.35.0)",
    "python-multipart (>=0.0.20)",
    "ffmpeg-python (>=0.2.0)",
    "numpy (>=2.2.6)",
    "openai-whisper (>=20250625)",
    "faster-whisper (>=1.1.1)",
    "whisperx (>=3.4.2)",
    "transformers (>=4.40.0)",
    "opentelemetry-api (>=1.24.0)",
    "opentelemetry-sdk (>=1.24.0)",
    "opentelemetry-instrumentation-fastapi (>=0.45b0)",
    "opentelemetry-exporter-prometheus (>=0.55b1)",
    "prometheus-client (>=0.20.0)",
    "tqdm (>=4.67.1)",
    "llvmlite (>=0.44.0)",
    "numba (>=0.61.2)",
]
authors = [
    { name = "pbusenius" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["speech-recognition", "whisper", "asr", "webservice"]

[project.urls]
Homepage = "https://github.com/pbusenius/whisper-asr-webservice/"
Repository = "https://github.com/pbusenius/whisper-asr-webservice"

[project.scripts]
whisper-asr-webservice = "app.webservice:start"

[project.optional-dependencies]
cpu = [
    "torch==2.7.1",
    "torchaudio==2.7.1"
]
cuda = [
    "torch==2.7.1",
    "torchaudio==2.7.1"
]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "ruff>=0.9.6,<1.0.0",
    "black>=25.1.0,<26.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
# Configure torch and torchaudio to use PyTorch CPU index by default
# For CUDA builds, use: uv sync --extra cuda --index-url https://download.pytorch.org/whl/cu126
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
known-first-party = []
